--- a/kubemarine/resources/configurations/globals.yaml
+++ b/kubemarine/resources/configurations/globals.yaml
@@ -77,13 +77,16 @@ nodes:
     grace_period: 60
   remove:
     check_active_timeout: 30
+  command_execution:
+    timeout: 2700
 error_handling:
   failure_message: >
     An unexpected error occurred. It is failed to solve the problem automatically.
     Follow the instructions from the Troubleshooting Guide available to you.
-    If it is impossible to solve the problem, provide the dump and the technical information above to the support team.
+    If it is impossible to solve the problem, provide the dump and the technical information above
+    to the support team.
 
-    You can restart the script from the last task with the following command:
+    You can restart the procedure from the last task with the following command:
     %s --tasks="%s"
 keepalived:
   restart_wait: 5
