--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -149,6 +149,21 @@ services:
       - '{% if not nodes[0]["internal_address"]|isipv4 %}localhost.localdomain{% endif %}'
 
   audit:
+    cluster_policy:
+      apiVersion: audit.k8s.io/v1
+      kind: Policy
+      omitStages:
+        - "RequestReceived"
+      rules:
+        # log changes to pods at RequestResponse level
+        - level: RequestResponse
+          omitStages:
+            - RequestReceived
+          resources:
+            - group: "" # core API group; add third-party API services and your API services if needed
+              resources: [ "pods" ]
+              verbs: [ "create", "patch", "update", "delete" ]
+
     rules:
       - '{% if services["cri"]["containerRuntime"] == "docker" %}-w /var/lib/docker -k docker{% endif %}'
       - '{% if services["cri"]["containerRuntime"] == "docker" %}-w /etc/docker -k docker{% endif %}'
