[MANOPD-70719] Verify plugins restart after template applying (#74)
* MANOPD-70719 Verify plugins restart after template applying

* MANOPD-70719 Verify plugins restart after template applying

* MANOPD-70719 Fixed pods restart clarification

* MANOPD-70719 Fixed pods time compare with invalid deployment node time

* MANOPD-70719 Rewritten pods restart validation algorithm

* Fix conflicts

* MANOPD-70719 Added DaemonSets and Deployments expect

* Removed old unused code

--- a/kubemarine/resources/configurations/globals.yaml
+++ b/kubemarine/resources/configurations/globals.yaml
@@ -77,6 +77,7 @@ nodes:
     grace_period: 60
   remove:
     check_active_timeout: 30
+  max_time_difference: 15000
   command_execution:
     timeout: 2700
 error_handling:
