--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -26,6 +26,8 @@ services:
       certSANs: []
       extraArgs:
         enable-admission-plugins: NodeRestriction
+        feature-gates: ""
+        admission-control-config-file: ""
         profiling: "false"
         audit-log-path: /var/log/audit.log
         audit-log-maxage: "30"
@@ -574,6 +576,7 @@ rbac:
           kind: ClusterRole
         subjects:
           - kind: ServiceAccount
+  admission: psp
   psp:
     pod-security: enabled
     oob-policies:
@@ -584,3 +587,16 @@ rbac:
       psp-list: []
       roles-list: []
       bindings-list: []
+  pss:
+    pod-security: enabled
+    defaults:
+      enforce: baseline
+      enforce-version: latest
+      audit: baseline
+      audit-version: latest
+      warn: baseline
+      warn-version: latest
+    exemptions:
+      usernames: []
+      runtimeClasses: []
+      namespaces: ["kube-system"]
