--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -586,5 +586,5 @@ rbac:
       bindings-list: []
 
 procedure_history:
-  archive_threshold: 5
-  delete_threshold: 8
+  not_archive_threshold: 5
+  delete_threshold: 10
