[MANOPD-74000] PSS implementation (#127)
* MANOPD-74000 PSS implementation

* Ambigious files

* PSS fixes

* MANOPD-74000 PSS fixes

* MANOPD-74000 PSS labels for namespaces

* MANOPD-74000 check PSS config

* MANOPD-74000 templates fix

* MANOPD-74000 default config

* MANOPD-74000 default config fix

* MANOPD-74000 fix

* MANOPD-74000 Doc update

* MANOPD-74000 Comments

* MANOPD-74000 Comments

* Update Installation.md

Co-authored-by: shmo1218 <94443646+shmo1218@users.noreply.github.com>

--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -574,6 +574,7 @@ rbac:
           kind: ClusterRole
         subjects:
           - kind: ServiceAccount
+  admission: psp
   psp:
     pod-security: enabled
     oob-policies:
@@ -584,3 +585,16 @@ rbac:
       psp-list: []
       roles-list: []
       bindings-list: []
+  pss:
+    pod-security: enabled
+    defaults:
+      enforce: baseline
+      enforce-version: latest
+      audit: baseline
+      audit-version: latest
+      warn: baseline
+      warn-version: latest
+    exemptions:
+      usernames: []
+      runtimeClasses: []
+      namespaces: ["kube-system"]
