Fixed code inventory procedure

--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -575,6 +575,16 @@ rbac:
         subjects:
           - kind: ServiceAccount
   admission: psp
+  psp:
+    pod-security: enabled
+    oob-policies:
+      default: enabled
+      host-network: enabled
+      anyuid: enabled
+    custom-policies:
+      psp-list: [ ]
+      roles-list: [ ]
+      bindings-list: [ ]
   pss:
     pod-security: enabled
     defaults:
@@ -585,9 +595,9 @@ rbac:
       warn: baseline
       warn-version: latest
     exemptions:
-      usernames: []
-      runtimeClasses: []
-      namespaces: ["kube-system"]
+      usernames: [ ]
+      runtimeClasses: [ ]
+      namespaces: [ "kube-system" ]
 
 procedure_history:
   not_archive_threshold: 5
