--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -8,7 +8,16 @@ on:
 env:
   TAG_NAME: ${{ github.event.release.tag_name || (github.ref == 'refs/heads/main' && 'main') || 'unknown' }}
 jobs:
+  deltas:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - run: if [ ${{ env.TAG_NAME }} != 'main' ] && [ ${{ env.TAG_NAME }} != 'unknown' ]; then mkdir -p kubemarine/deltas/${{ env.TAG_NAME }} && mv -- kubemarine/deltas/*(.) kubemarine/deltas/${{ env.TAG_NAME }}; fi
+      - uses: stefanzweifel/git-auto-commit-action@v4
+         with:
+           commit_message: Move Deltas to version directory
   publish-docker:
+    needs: deltas
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
