--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -15,6 +15,13 @@ jobs:
        - uses: stefanzweifel/git-auto-commit-action@v4
          with:
            commit_message: Auto-update license header
+  selftest:
+    needs: license
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - run: docker build -t kubemarine --no-cache .
+      - run: docker run kubemarine selftest
   unit-tests:
     needs: license
     runs-on: ubuntu-latest
