--- a/kubemarine/resources/configurations/globals.yaml
+++ b/kubemarine/resources/configurations/globals.yaml
@@ -1,11 +1,11 @@
 kubernetes_versions:
+  v1.20:
+    supported: true
   v1.21:
     supported: true
   v1.22:
     supported: true
   v1.23:
-    supported: true
-  v1.24:
     supported: true
 
 connection:
@@ -86,7 +86,6 @@ error_handling:
     Follow the instructions from the Troubleshooting Guide available to you.
     If it is impossible to solve the problem, provide the dump and the technical information above
     to the support team.
-
     You can restart the procedure from the last task with the following command:
     %s --tasks="%s"
 keepalived:
@@ -106,11 +105,19 @@ workaround:
 compatibility_map:
   software:
     docker:
-      v1.21.5:
+      v1.20.11:
         version_rhel: 19.03*
         version_rhel8: 19.03*
         version_debian: 5:19.03.*
-      v1.21.12:
+      v1.20.15:
+        version_rhel: 19.03*
+        version_rhel8: 19.03*
+        version_debian: 5:19.03.*
+      v1.21.2:
+        version_rhel: 19.03*
+        version_rhel8: 19.03*
+        version_debian: 5:19.03.*
+      v1.21.5:
         version_rhel: 19.03*
         version_rhel8: 19.03*
         version_debian: 5:19.03.*
@@ -118,43 +125,43 @@ compatibility_map:
         version_rhel: 19.03*
         version_rhel8: 19.03*
         version_debian: 5:19.03.*
-      v1.22.9:
-        version_rhel: 19.03*
-        version_rhel8: 19.03*
-        version_debian: 5:19.03.*
       v1.23.1:
-        version_rhel: 19.03*
-        version_rhel8: 19.03*
-        version_debian: 5:19.03.*
-      v1.23.6:
         version_rhel: 19.03*
         version_rhel8: 19.03*
         version_debian: 5:19.03.*
     containerd:
-      v1.21.5:
+      v1.20.11:
         version_rhel8: 1.4*
         version_debian: 1.5.*
-      v1.21.12:
+      v1.20.15:
+        version_rhel8: 1.4*
+        version_debian: 1.5.*
+      v1.21.2:
+        version_rhel8: 1.4*
+        version_debian: 1.5.*
+      v1.21.5:
         version_rhel8: 1.4*
         version_debian: 1.5.*
       v1.22.2:
         version_rhel8: 1.4*
         version_debian: 1.5.*
-      v1.22.9:
-        version_rhel8: 1.4*
-        version_debian: 1.5.*
       v1.23.1:
-        version_rhel8: 1.4*
-        version_debian: 1.5.*
-      v1.23.6:
         version_rhel8: 1.4*
         version_debian: 1.5.*
     containerdio:
-      v1.21.5:
+      v1.20.11:
         version_rhel: 1.4*
         version_rhel8: 1.4*
         version_debian: 1.4.*
-      v1.21.12:
+      v1.20.15:
+        version_rhel: 1.4*
+        version_rhel8: 1.4*
+        version_debian: 1.4.*
+      v1.21.2:
+        version_rhel: 1.4*
+        version_rhel8: 1.4*
+        version_debian: 1.4.*
+      v1.21.5:
         version_rhel: 1.4*
         version_rhel8: 1.4*
         version_debian: 1.4.*
@@ -162,24 +169,24 @@ compatibility_map:
         version_rhel: 1.4*
         version_rhel8: 1.4*
         version_debian: 1.4.*
-      v1.22.9:
-        version_rhel: 1.4*
-        version_rhel8: 1.4*
-        version_debian: 1.4.*
       v1.23.1:
-        version_rhel: 1.4*
-        version_rhel8: 1.4*
-        version_debian: 1.4.*
-      v1.23.6:
         version_rhel: 1.4*
         version_rhel8: 1.4*
         version_debian: 1.4.*
     podman:
-      v1.21.5:
+      v1.20.11:
         version_rhel: 1.6.4*
         version_rhel8: "*"
         version_debian: "*"
-      v1.21.12:
+      v1.20.15:
+        version_rhel: 1.6.4*
+        version_rhel8: "*"
+        version_debian: "*"
+      v1.21.2:
+        version_rhel: 1.6.4*
+        version_rhel8: "*"
+        version_debian: "*"
+      v1.21.5:
         version_rhel: 1.6.4*
         version_rhel8: "*"
         version_debian: "*"
@@ -187,24 +194,24 @@ compatibility_map:
         version_rhel: 1.6.4*
         version_rhel8: "*"
         version_debian: "*"
-      v1.22.9:
-        version_rhel: 1.6.4*
-        version_rhel8: "*"
-        version_debian: "*"
       v1.23.1:
-        version_rhel: 1.6.4*
-        version_rhel8: "*"
-        version_debian: "*"
-      v1.23.6:
         version_rhel: 1.6.4*
         version_rhel8: "*"
         version_debian: "*"
     haproxy:
-      v1.21.5:
+      v1.20.11:
         version_rhel: 1.8*
         version_rhel8: 1.8*
         version_debian: 2.0.*
-      v1.21.12:
+      v1.20.15:
+        version_rhel: 1.8*
+        version_rhel8: 1.8*
+        version_debian: 2.0.*
+      v1.21.2:
+        version_rhel: 1.8*
+        version_rhel8: 1.8*
+        version_debian: 2.0.*
+      v1.21.5:
         version_rhel: 1.8*
         version_rhel8: 1.8*
         version_debian: 2.0.*
@@ -212,24 +219,24 @@ compatibility_map:
         version_rhel: 1.8*
         version_rhel8: 1.8*
         version_debian: 2.0.*
-      v1.22.9:
-        version_rhel: 1.8*
-        version_rhel8: 1.8*
-        version_debian: 2.0.*
       v1.23.1:
-        version_rhel: 1.8*
-        version_rhel8: 1.8*
-        version_debian: 2.0.*
-      v1.23.6:
         version_rhel: 1.8*
         version_rhel8: 1.8*
         version_debian: 2.0.*
     keepalived:
-      v1.21.5:
+      v1.20.11:
         version_rhel: 1.3*
         version_rhel8: 2.1*
         version_debian: 1:2.0.*
-      v1.21.12:
+      v1.20.15:
+        version_rhel: 1.3*
+        version_rhel8: 2.1*
+        version_debian: 1:2.0.*
+      v1.21.2:
+        version_rhel: 1.3*
+        version_rhel8: 2.1*
+        version_debian: 1:2.0.*
+      v1.21.5:
         version_rhel: 1.3*
         version_rhel8: 2.1*
         version_debian: 1:2.0.*
@@ -237,29 +244,36 @@ compatibility_map:
         version_rhel: 1.3*
         version_rhel8: 2.1*
         version_debian: 1:2.0.*
-      v1.22.9:
-        version_rhel: 1.3*
-        version_rhel8: 2.1*
-        version_debian: 1:2.0.*
       v1.23.1:
-        version_rhel: 1.3*
-        version_rhel8: 2.1*
-        version_debian: 1:2.0.*
-      v1.23.6:
         version_rhel: 1.3*
         version_rhel8: 2.1*
         version_debian: 1:2.0.*
     crictl:
+      v1.20.11:
+        version: v1.23.0
+        sha1: 332001091d2e4523cbe8d97ab0f7bfbf4dfebda2
+      v1.20.15:
+        version: v1.23.0
+        sha1: 332001091d2e4523cbe8d97ab0f7bfbf4dfebda2
+      v1.21.2:
+        version: v1.23.0
+        sha1: 332001091d2e4523cbe8d97ab0f7bfbf4dfebda2
       v1.21.5:
         version: v1.23.0
-        sha1: eaf4ffa1cfac5c69ec522d9562c8ee6ddd873f3e
+        sha1: 332001091d2e4523cbe8d97ab0f7bfbf4dfebda2
       v1.22.2:
-        version: v1.23.0
-        sha1: b840ddd1a8a35b12fd22d2657c7d17cb2f6f2e05
+        version: v1.22.0
+        sha1: 332001091d2e4523cbe8d97ab0f7bfbf4dfebda2
       v1.23.1:
-        version: v1.23.0
-        sha1: b840ddd1a8a35b12fd22d2657c7d17cb2f6f2e05
+        version: v1.22.0
+        sha1: 332001091d2e4523cbe8d97ab0f7bfbf4dfebda2
     kubeadm:
+      v1.20.11:
+        sha1: 59f904f50ea10cbc69007891301a2169f42f3537
+      v1.20.15:
+        sha1: f506920ec8bf6ff297a01c0e5ed37b47ebc5f940
+      v1.21.2:
+        sha1: cbb07d380de4ef73d43d594a1055839fa9753138
       v1.21.5:
         sha1: 2ee056ac1d0b9c2289bdb03cb7bb0cd21ee29a8b
       v1.22.2:
@@ -267,6 +281,12 @@ compatibility_map:
       v1.23.1:
         sha1: ac147fd6a951670fe7414cee8b3cb1e6ac1d40d1
     kubelet:
+      v1.20.11:
+        sha1: 00c0b6a8dda55616343baafee9e9aa2775bc3c22
+      v1.20.15:
+        sha1: d76fea5c9d5a20f80b690924fbfbc98793c1da77
+      v1.21.2:
+        sha1: 024e458aa0f74cba6b773401b779590437812fc6
       v1.21.5:
         sha1: 61da22475b977cb678cca8cf7249bf727d72ee89
       v1.22.2:
@@ -274,6 +294,12 @@ compatibility_map:
       v1.23.1:
         sha1: 4a7e2e5f5e6b8e95efa52931786bc275a037bc50
     kubectl:
+      v1.20.11:
+        sha1: 0feee9301e7f6cb6fba1d841a6fd8f378589145f
+      v1.20.15:
+        sha1: 0b77c85fbdd4eb6f73115c91eb9651c92dbee68b
+      v1.21.2:
+        sha1: 2c7a7de9fff41ac49f7c2546a9b1aff2c1d9c468
       v1.21.5:
         sha1: c4648e31ca16fb00e3826f8ab7c653da81eff367
       v1.22.2:
@@ -281,16 +307,23 @@ compatibility_map:
       v1.23.1:
         sha1: 4ceb8d046a2d8253495aa86d13f11e2eb29644fc
     calico:
+      v1.20:
+        version: v3.22.2
+        sha1: b1e2c550480afe4250a34b0e4529eb38ae06973f
       v1.21:
         version: v3.22.2
-        sha1: a91680d2d2c4081fedd685c5eb6c842685bcb6b2
+        sha1: b1e2c550480afe4250a34b0e4529eb38ae06973f
       v1.22:
         version: v3.22.2
-        sha1: a91680d2d2c4081fedd685c5eb6c842685bcb6b2
+        sha1: b1e2c550480afe4250a34b0e4529eb38ae06973f
       v1.23:
         version: v3.22.2
-        sha1: a91680d2d2c4081fedd685c5eb6c842685bcb6b2
+        sha1: b1e2c550480afe4250a34b0e4529eb38ae06973f
     nginx-ingress-controller:
+      v1.20:
+        image-name: ingress-nginx/controller
+        version: v1.2.0
+        pod-name: ingress-nginx-controller
       v1.21:
         image-name: ingress-nginx/controller
         version: v1.2.0
@@ -304,6 +337,9 @@ compatibility_map:
         version: v1.2.0
         pod-name: ingress-nginx-controller
     kubernetes-dashboard:
+      v1.20:
+        version: v2.5.1
+        metrics-scraper-version: v1.0.7
       v1.21:
         version: v2.5.1
         metrics-scraper-version: v1.0.7
@@ -314,6 +350,8 @@ compatibility_map:
         version: v2.5.1
         metrics-scraper-version: v1.0.7
     local-path-provisioner:
+      v1.20:
+        version: v0.0.22
       v1.21:
         version: v0.0.22
       v1.22:
@@ -321,6 +359,8 @@ compatibility_map:
       v1.23:
         version: v0.0.22
     pause:
+      v1.20:
+        version: 3.2
       v1.21:
         version: 3.4.1
       v1.22:
