Upgrade recourses kubernetes

--- a/kubemarine/resources/configurations/globals.yaml
+++ b/kubemarine/resources/configurations/globals.yaml
@@ -113,11 +113,11 @@ compatibility_map:
         version_rhel: 19.03*
         version_rhel8: 19.03*
         version_debian: 5:19.03.*
-      v1.21.2:
+      v1.21.5:
         version_rhel: 19.03*
         version_rhel8: 19.03*
         version_debian: 5:19.03.*
-      v1.21.5:
+      v1.21.12:
         version_rhel: 19.03*
         version_rhel8: 19.03*
         version_debian: 5:19.03.*
@@ -125,7 +125,15 @@ compatibility_map:
         version_rhel: 19.03*
         version_rhel8: 19.03*
         version_debian: 5:19.03.*
+      v1.22.9:
+        version_rhel: 19.03*
+        version_rhel8: 19.03*
+        version_debian: 5:19.03.*
       v1.23.1:
+        version_rhel: 19.03*
+        version_rhel8: 19.03*
+        version_debian: 5:19.03.*
+      v1.23.6:
         version_rhel: 19.03*
         version_rhel8: 19.03*
         version_debian: 5:19.03.*
@@ -136,16 +144,22 @@ compatibility_map:
       v1.20.15:
         version_rhel8: 1.4*
         version_debian: 1.5.*
-      v1.21.2:
+      v1.21.5:
         version_rhel8: 1.4*
         version_debian: 1.5.*
-      v1.21.5:
+      v1.21.12:
         version_rhel8: 1.4*
         version_debian: 1.5.*
       v1.22.2:
         version_rhel8: 1.4*
         version_debian: 1.5.*
+      v1.22.9:
+        version_rhel8: 1.4*
+        version_debian: 1.5.*
       v1.23.1:
+        version_rhel8: 1.4*
+        version_debian: 1.5.*
+      v1.23.6:
         version_rhel8: 1.4*
         version_debian: 1.5.*
     containerdio:
@@ -157,11 +171,11 @@ compatibility_map:
         version_rhel: 1.4*
         version_rhel8: 1.4*
         version_debian: 1.4.*
-      v1.21.2:
+      v1.21.5:
         version_rhel: 1.4*
         version_rhel8: 1.4*
         version_debian: 1.4.*
-      v1.21.5:
+      v1.21.12:
         version_rhel: 1.4*
         version_rhel8: 1.4*
         version_debian: 1.4.*
@@ -169,7 +183,15 @@ compatibility_map:
         version_rhel: 1.4*
         version_rhel8: 1.4*
         version_debian: 1.4.*
+      v1.22.9:
+        version_rhel: 1.4*
+        version_rhel8: 1.4*
+        version_debian: 1.4.*
       v1.23.1:
+        version_rhel: 1.4*
+        version_rhel8: 1.4*
+        version_debian: 1.4.*
+      v1.23.6:
         version_rhel: 1.4*
         version_rhel8: 1.4*
         version_debian: 1.4.*
@@ -182,11 +204,11 @@ compatibility_map:
         version_rhel: 1.6.4*
         version_rhel8: "*"
         version_debian: "*"
-      v1.21.2:
+      v1.21.5:
         version_rhel: 1.6.4*
         version_rhel8: "*"
         version_debian: "*"
-      v1.21.5:
+      v1.21.12:
         version_rhel: 1.6.4*
         version_rhel8: "*"
         version_debian: "*"
@@ -194,7 +216,15 @@ compatibility_map:
         version_rhel: 1.6.4*
         version_rhel8: "*"
         version_debian: "*"
+      v1.22.9:
+        version_rhel: 1.6.4*
+        version_rhel8: "*"
+        version_debian: "*"
       v1.23.1:
+        version_rhel: 1.6.4*
+        version_rhel8: "*"
+        version_debian: "*"
+      v1.23.6:
         version_rhel: 1.6.4*
         version_rhel8: "*"
         version_debian: "*"
@@ -207,11 +237,11 @@ compatibility_map:
         version_rhel: 1.8*
         version_rhel8: 1.8*
         version_debian: 2.0.*
-      v1.21.2:
+      v1.21.5:
         version_rhel: 1.8*
         version_rhel8: 1.8*
         version_debian: 2.0.*
-      v1.21.5:
+      v1.21.12:
         version_rhel: 1.8*
         version_rhel8: 1.8*
         version_debian: 2.0.*
@@ -219,7 +249,15 @@ compatibility_map:
         version_rhel: 1.8*
         version_rhel8: 1.8*
         version_debian: 2.0.*
+      v1.22.9:
+        version_rhel: 1.8*
+        version_rhel8: 1.8*
+        version_debian: 2.0.*
       v1.23.1:
+        version_rhel: 1.8*
+        version_rhel8: 1.8*
+        version_debian: 2.0.*
+      v1.23.6:
         version_rhel: 1.8*
         version_rhel8: 1.8*
         version_debian: 2.0.*
@@ -232,11 +270,11 @@ compatibility_map:
         version_rhel: 1.3*
         version_rhel8: 2.1*
         version_debian: 1:2.0.*
-      v1.21.2:
+      v1.21.5:
         version_rhel: 1.3*
         version_rhel8: 2.1*
         version_debian: 1:2.0.*
-      v1.21.5:
+      v1.21.12:
         version_rhel: 1.3*
         version_rhel8: 2.1*
         version_debian: 1:2.0.*
@@ -244,7 +282,15 @@ compatibility_map:
         version_rhel: 1.3*
         version_rhel8: 2.1*
         version_debian: 1:2.0.*
+      v1.22.9:
+        version_rhel: 1.3*
+        version_rhel8: 2.1*
+        version_debian: 1:2.0.*
       v1.23.1:
+        version_rhel: 1.3*
+        version_rhel8: 2.1*
+        version_debian: 1:2.0.*
+      v1.23.6:
         version_rhel: 1.3*
         version_rhel8: 2.1*
         version_debian: 1:2.0.*
@@ -255,57 +301,75 @@ compatibility_map:
       v1.20.15:
         version: v1.23.0
         sha1: 332001091d2e4523cbe8d97ab0f7bfbf4dfebda2
-      v1.21.2:
-        version: v1.23.0
-        sha1: 332001091d2e4523cbe8d97ab0f7bfbf4dfebda2
       v1.21.5:
         version: v1.23.0
         sha1: 332001091d2e4523cbe8d97ab0f7bfbf4dfebda2
+      v1.21.12:
+        version: v1.23.0
+        sha1: 332001091d2e4523cbe8d97ab0f7bfbf4dfebda2
       v1.22.2:
-        version: v1.22.0
+        version: v1.23.0
+        sha1: 332001091d2e4523cbe8d97ab0f7bfbf4dfebda2
+      v1.22.9:
+        version: v1.23.0
         sha1: 332001091d2e4523cbe8d97ab0f7bfbf4dfebda2
       v1.23.1:
-        version: v1.22.0
+        version: v1.23.0
+        sha1: 332001091d2e4523cbe8d97ab0f7bfbf4dfebda2
+      v1.23.6:
+        version: v1.23.0
         sha1: 332001091d2e4523cbe8d97ab0f7bfbf4dfebda2
     kubeadm:
       v1.20.11:
         sha1: 59f904f50ea10cbc69007891301a2169f42f3537
       v1.20.15:
         sha1: f506920ec8bf6ff297a01c0e5ed37b47ebc5f940
-      v1.21.2:
-        sha1: cbb07d380de4ef73d43d594a1055839fa9753138
       v1.21.5:
         sha1: 2ee056ac1d0b9c2289bdb03cb7bb0cd21ee29a8b
+      v1.21.12:
+        sha1: b566840ac2bd50d9c83165ac61331ba7998bf7ce
       v1.22.2:
         sha1: 190703cfe16ad00d0f91487d00bece9667cd5903
+      v1.22.9:
+        sha1: 33418daedfd3651ebcf5c0ab0c6c701764962e5d
       v1.23.1:
         sha1: ac147fd6a951670fe7414cee8b3cb1e6ac1d40d1
+      v1.23.6:
+        sha1: 90386507b3214adb6b2d4ed05a07e80f11f674d6
     kubelet:
       v1.20.11:
         sha1: 00c0b6a8dda55616343baafee9e9aa2775bc3c22
       v1.20.15:
         sha1: d76fea5c9d5a20f80b690924fbfbc98793c1da77
-      v1.21.2:
-        sha1: 024e458aa0f74cba6b773401b779590437812fc6
       v1.21.5:
         sha1: 61da22475b977cb678cca8cf7249bf727d72ee89
+      v1.21.12:
+        sha1: 45a50b60122f35505ecd08479be1ae232b0ac524
       v1.22.2:
         sha1: 41a2980963427a17c4fbce74aee6bb0bcf08b9ff
+      v1.22.9:
+        sha1: 21b4104937b65fdf0fdf9fbb57ff22a879b21e3f
       v1.23.1:
         sha1: 4a7e2e5f5e6b8e95efa52931786bc275a037bc50
+      v1.23.6:
+        sha1: 326110dcb62b66e69490d039b170682fb71c5560
     kubectl:
       v1.20.11:
         sha1: 0feee9301e7f6cb6fba1d841a6fd8f378589145f
       v1.20.15:
         sha1: 0b77c85fbdd4eb6f73115c91eb9651c92dbee68b
-      v1.21.2:
-        sha1: 2c7a7de9fff41ac49f7c2546a9b1aff2c1d9c468
       v1.21.5:
         sha1: c4648e31ca16fb00e3826f8ab7c653da81eff367
+      v1.21.12:
+        sha1: 54a381297eb3a94ab968bb8bfff5f91e3d08805a
       v1.22.2:
         sha1: de9b5c2fe2faefc2b4a61adf6f89144d3f0a09b1
+      v1.22.9:
+        sha1: e4137d683b9f93211bb6d9fa155d0bb423e871c9
       v1.23.1:
         sha1: 4ceb8d046a2d8253495aa86d13f11e2eb29644fc
+      v1.23.6:
+        sha1: 65a24196b4cc9a3d2eafbd254b9d2d4add8ba152
     calico:
       v1.20:
         version: v3.22.2
