Code changes for 'master' role

--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -73,7 +73,7 @@ services:
   thirdparties:
     /usr/bin/etcdctl:
       source: 'resources/scripts/etcdctl.sh'
-      group: master
+      group: control-plane
       binary: false
     /usr/bin/kubeadm:
       source: 'https://storage.googleapis.com/kubernetes-release/release/{{ services.kubeadm.kubernetesVersion }}/bin/linux/amd64/kubeadm'
@@ -84,11 +84,11 @@ services:
     /usr/bin/kubectl:
       source: 'https://storage.googleapis.com/kubernetes-release/release/{{ services.kubeadm.kubernetesVersion }}/bin/linux/amd64/kubectl'
       sha1: '{{ globals.compatibility_map.software.kubectl[services.kubeadm.kubernetesVersion].sha1 }}'
-      group: master
+      group: control-plane
     /usr/bin/calicoctl:
       source: 'https://github.com/projectcalico/calicoctl/releases/download/{{ plugins.calico.version }}/calicoctl-linux-amd64'
       sha1: '{{ globals.compatibility_map.software.calico[services.kubeadm.kubernetesVersion|minorversion].sha1 }}'
-      group: master
+      group: control-plane
     # "crictl" is installed by default ONLY if "containerRuntime != docker", otherwise it is removed programmatically
     /usr/bin/crictl.tar.gz:
       source: 'https://github.com/kubernetes-sigs/cri-tools/releases/download/{{ globals.compatibility_map.software.crictl[services.kubeadm.kubernetesVersion].version }}/crictl-{{ globals.compatibility_map.software.crictl[services.kubeadm.kubernetesVersion].version }}-linux-amd64.tar.gz'
@@ -380,7 +380,7 @@ plugins:
         - thirdparty: /usr/bin/calicoctl
         - shell:
             command: mkdir -p /etc/calico
-            groups: ['master']
+            groups: ['control-plane']
             sudo: true
         - template:
             source: templates/plugins/calicoctl.cfg.j2
