--- a/examples/cluster.yaml/full-cluster.yaml
+++ b/examples/cluster.yaml/full-cluster.yaml
@@ -23,18 +23,18 @@ nodes:
     address: "10.101.0.2"
     internal_address: "192.168.0.2"
     roles: ["balancer"]
-  - name: "k8s-master-1"
+  - name: "k8s-control-plane-1"
     address: "10.101.0.3"
     internal_address: "192.168.0.3"
-    roles: ["master"]
-  - name: "k8s-master-2"
+    roles: ["control-plane"]
+  - name: "k8s-control-plane-2"
     address: "10.101.0.4"
     internal_address: "192.168.0.4"
-    roles: ["master"]
-  - name: "k8s-master-3"
+    roles: ["control-plane"]
+  - name: "k8s-control-plane-3"
     address: "10.101.0.5"
     internal_address: "192.168.0.5"
-    roles: ["master"]
+    roles: ["control-plane"]
   - name: "k8s-worker-1"
     address: "10.101.0.6"
     internal_address: "192.168.0.6"
@@ -89,9 +89,9 @@ services:
         - 192.168.0.8
         - k8s-lb-1
         - k8s-lb-2
-        - k8s-master-1
-        - k8s-master-2
-        - k8s-master-3
+        - k8s-control-plane-1
+        - k8s-control-plane-2
+        - k8s-control-plane-3
         - k8s-worker-1
         - k8s-worker-2
         - k8s-worker-3
@@ -150,13 +150,13 @@ services:
       source: 'https://example.com/kubernetes/v1.16.3/bin/linux/amd64/kubeadm'
       sha1: e5cdfcda337a5c8d59035da9db0c2b02913271d1
       groups:
-        - master
+        - control-plane
         - worker
     /opt/cni/cni-plugins-linux.tgz:
       source: 'https://example.com/cni-plugins/v0.8.3/cni-plugins-linux-amd64-v0.8.3.tgz'
       sha1: f662ec5b648e114802276f8f353ad48a3376da47
       unpack: '/opt/cni/bin'
-      group: master
+      group: control-plane
     /usr/bin/calicoctl:
       source: 'https://example.com/calicoctl/v3.10.1/calicoctl-linux-amd64'
 
