--- a/kubemarine/resources/configurations/globals.yaml
+++ b/kubemarine/resources/configurations/globals.yaml
@@ -129,6 +129,10 @@ compatibility_map:
         version_rhel: 19.03*
         version_rhel8: 19.03*
         version_debian: 5:19.03.*
+      v1.24.0:
+        version_rhel: 19.03*
+        version_rhel8: 19.03*
+        version_debian: 5:19.03.*
     containerd:
       v1.21.5:
         version_rhel8: 1.4*
@@ -146,6 +150,9 @@ compatibility_map:
         version_rhel8: 1.4*
         version_debian: 1.5.*
       v1.23.6:
+        version_rhel8: 1.4*
+        version_debian: 1.5.*
+      v1.24.0:
         version_rhel8: 1.4*
         version_debian: 1.5.*
     containerdio:
@@ -170,6 +177,10 @@ compatibility_map:
         version_rhel8: 1.4*
         version_debian: 1.4.*
       v1.23.6:
+        version_rhel: 1.4*
+        version_rhel8: 1.4*
+        version_debian: 1.4.*
+      v1.24.0:
         version_rhel: 1.4*
         version_rhel8: 1.4*
         version_debian: 1.4.*
@@ -198,6 +209,10 @@ compatibility_map:
         version_rhel: 1.6.4*
         version_rhel8: "*"
         version_debian: "*"
+      v1.24.0:
+        version_rhel: 1.6.4*
+        version_rhel8: "*"
+        version_debian: "*"
     haproxy:
       v1.21.5:
         version_rhel: 1.8*
@@ -220,6 +235,10 @@ compatibility_map:
         version_rhel8: 1.8*
         version_debian: 2.0.*
       v1.23.6:
+        version_rhel: 1.8*
+        version_rhel8: 1.8*
+        version_debian: 2.0.*
+      v1.24.0:
         version_rhel: 1.8*
         version_rhel8: 1.8*
         version_debian: 2.0.*
@@ -248,6 +267,10 @@ compatibility_map:
         version_rhel: 1.3*
         version_rhel8: 2.1*
         version_debian: 1:2.0.*
+      v1.24.0:
+        version_rhel: 1.3*
+        version_rhel8: 2.1*
+        version_debian: 1:2.0.*
     crictl:
       v1.21.5:
         version: v1.23.0
@@ -267,6 +290,9 @@ compatibility_map:
       v1.23.6:
         version: v1.23.0
         sha1: 332001091d2e4523cbe8d97ab0f7bfbf4dfebda2
+      v1.24.0:
+        version: v1.23.0
+        sha1: 332001091d2e4523cbe8d97ab0f7bfbf4dfebda2
     kubeadm:
       v1.21.5:
         sha1: 2ee056ac1d0b9c2289bdb03cb7bb0cd21ee29a8b
@@ -280,6 +306,8 @@ compatibility_map:
         sha1: ac147fd6a951670fe7414cee8b3cb1e6ac1d40d1
       v1.23.6:
         sha1: 90386507b3214adb6b2d4ed05a07e80f11f674d6
+      v1.24.0:
+        sha1: a60b0adcdc6f19e79bd98663914b694a325db819
     kubelet:
       v1.21.5:
         sha1: 61da22475b977cb678cca8cf7249bf727d72ee89
@@ -293,6 +321,8 @@ compatibility_map:
         sha1: 4a7e2e5f5e6b8e95efa52931786bc275a037bc50
       v1.23.6:
         sha1: 326110dcb62b66e69490d039b170682fb71c5560
+      v1.24.0:
+        sha1: ce74875b3802f4a9ac5dbd32a3f4c684b9ee4fd3
     kubectl:
       v1.21.5:
         sha1: c4648e31ca16fb00e3826f8ab7c653da81eff367
@@ -306,6 +336,8 @@ compatibility_map:
         sha1: 4ceb8d046a2d8253495aa86d13f11e2eb29644fc
       v1.23.6:
         sha1: 65a24196b4cc9a3d2eafbd254b9d2d4add8ba152
+      v1.24.0:
+        sha1: 5fdcf3741992427698444a75a7f27a6d6c4a22ab
     calico:
       v1.21:
         version: v3.22.2
@@ -314,6 +346,9 @@ compatibility_map:
         version: v3.22.2
         sha1: b1e2c550480afe4250a34b0e4529eb38ae06973f
       v1.23:
+        version: v3.22.2
+        sha1: b1e2c550480afe4250a34b0e4529eb38ae06973f
+      v1.24:
         version: v3.22.2
         sha1: b1e2c550480afe4250a34b0e4529eb38ae06973f
     nginx-ingress-controller:
@@ -329,6 +364,10 @@ compatibility_map:
         image-name: ingress-nginx/controller
         version: v1.2.0
         pod-name: ingress-nginx-controller
+      v1.24:
+        image-name: ingress-nginx/controller
+        version: v1.2.0
+        pod-name: ingress-nginx-controller
     kubernetes-dashboard:
       v1.21:
         version: v2.5.1
@@ -339,12 +378,17 @@ compatibility_map:
       v1.23:
         version: v2.5.1
         metrics-scraper-version: v1.0.7
+      v1.24:
+        version: v2.5.1
+        metrics-scraper-version: v1.0.7
     local-path-provisioner:
       v1.21:
         version: v0.0.22
       v1.22:
         version: v0.0.22
       v1.23:
+        version: v0.0.22
+      v1.24:
         version: v0.0.22
     pause:
       v1.21:
@@ -353,6 +397,8 @@ compatibility_map:
         version: 3.5
       v1.23:
         version: 3.6
+      v1.24:
+        version: 3.7
 
   hardware:
     minimal:
