--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -390,6 +390,7 @@ plugins:
             source: templates/plugins/calico-ippool.yaml.j2
             destination: /etc/calico/ippool.yaml
             apply_command: 'calicoctl apply -f /etc/calico/ippool.yaml'
+        - template: 'templates/plugins/calico-rr.yaml.j2'
         - template:
             source: templates/plugins/calico-rr.sh.j2
             destination: /tmp/calico_rr.sh
