--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 PyYAML==6.0
-deepmerge==1.0.1
-fabric==2.6.0
+deepmerge==1.0.*
+fabric==2.6.*
 jinja2==2.11.*
-MarkupSafe==2.0.1
-invoke==1.6.0
-ruamel.yaml==0.17.20
-ansible==2.9.9
-pygelf==0.4.2
-toml==0.10.2
-python-dateutil==2.8.2
-deepdiff==5.7.0
+MarkupSafe==2.0.*
+invoke==1.6.*
+ruamel.yaml==0.17.*
+ansible==2.9.*
+pygelf==0.4.*
+toml==0.10.*
+python-dateutil==2.8.*
+deepdiff==5.7.*
