[MANOPD-74001]Kubetools inventory file preservation (#116)
* preserve inventory
* added tar flag to not preserve original owner during extraction

* fixed typo

Co-authored-by: koryaga <5212888+koryaga@users.noreply.github.com>
Co-authored-by: sergey kryazhev <sergey.kryazhev@netcracker.com>

--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -631,3 +631,7 @@ rbac:
       usernames: []
       runtimeClasses: []
       namespaces: ["kube-system"]
+
+procedure_history:
+  archive_threshold: 5
+  delete_threshold: 10
