--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -145,7 +145,7 @@ services:
 
   audit:
     cluster_policy:
-      apiVersion: audit.k8s.io/v1beta1
+      apiVersion: audit.k8s.io/v1
       kind: Policy
       # Don't generate audit events for all requests in RequestReceived stage.
       omitStages:
