The switch for cache_package_versions

--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -313,6 +313,7 @@ services:
       keep_configs_updated: True
 
   packages:
+    cache_versions: false
     package_manager:
       replace-repositories: false
     associations:
