Cache versions switcher default

--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -313,7 +313,7 @@ services:
       keep_configs_updated: True
 
   packages:
-    cache_versions: false
+    cache_versions: true
     package_manager:
       replace-repositories: false
     associations:
