--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -21,6 +21,8 @@ jobs:
           EVENT_CONTEXT: ${{ toJSON(github.event) }}
         run: |
           echo $EVENT_CONTEXT
+      - run: ls kubemarine/patches
+      - run: git branch
 #      - run: docker build . -t ghcr.io/netcracker/kubemarine:${{ env.TAG_NAME }}
 #      - run: echo ${{ secrets.GITHUB_TOKEN }} | docker login https://ghcr.io -u ${GITHUB_ACTOR} --password-stdin
 #      - run: docker push ghcr.io/netcracker/kubemarine:${{ env.TAG_NAME }}
@@ -35,3 +37,4 @@ jobs:
           EVENT_CONTEXT: ${{ toJSON(github.event) }}
         run: |
           echo $EVENT_CONTEXT
+      - run: git branch
